Blender crashes in several situations #37270

Closed
opened 2013-10-31 15:36:59 +01:00 by Matias Mendiola · 6 comments

%%%Windows 7 64bit, NVIDIA GeForce GTX 570
Blender 2.69 (sub 0), revision b'60885'. b'Release'

Problem: The software crashes in several situations (seem to be related with the hair modifier)

Steps to reproduce the error (based on attached .blend file)

  1. Trying to remove the particle hair system from the mesh -> Crash

  2. Use of CTRL+Z (undo) in object mode -> Crash

  3. Adding an object and manipulate any setting (example: Add a cube and change it radius) -> Crash

%%%

%%%Windows 7 64bit, NVIDIA GeForce GTX 570 Blender 2.69 (sub 0), revision b'60885'. b'Release' Problem: The software crashes in several situations (seem to be related with the hair modifier) Steps to reproduce the error (based on attached .blend file) 1. Trying to remove the particle hair system from the mesh -> Crash 2. Use of CTRL+Z (undo) in object mode -> Crash 3. Adding an object and manipulate any setting (example: Add a cube and change it radius) -> Crash %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed crash with existing in svn rev61040. But would be interesting how to reproduce such crash from scratch using older blender version (there might some more issues hanging around, so if you remember how to reproduce such crash that would be really cool to know :)%%%

%%%Fixed crash with existing in svn rev61040. But would be interesting how to reproduce such crash from scratch using older blender version (there might some more issues hanging around, so if you remember how to reproduce such crash that would be really cool to know :)%%%
Author
Member

%%%The problem is fixed, thanks. :)

I've been trying to reproduce the error from scratch, but with no luck.

I was looking at my previous saved files (before they started to have bugs), and the only difference I noticed is the use of the hair sytem.

I also enabled a force field (surface) for the same mesh, and after remove it from the physics tab, it still showed in the modifiers (you can see it in the file). Is this maybe another bug?

Hope this help you.%%%

%%%The problem is fixed, thanks. :) I've been trying to reproduce the error from scratch, but with no luck. I was looking at my previous saved files (before they started to have bugs), and the only difference I noticed is the use of the hair sytem. I also enabled a force field (surface) for the same mesh, and after remove it from the physics tab, it still showed in the modifiers (you can see it in the file). Is this maybe another bug? Hope this help you.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Well, for as long we can not reproduce issue we couldn't fix actual bug :(

As for the force field issue, it is now fixed in 000312ab51. So think we can close the report now :)

Well, for as long we can not reproduce issue we couldn't fix actual bug :( As for the force field issue, it is now fixed in 000312ab51. So think we can close the report now :)
Author
Member

Sure thing. Thanks for also fix the other bug!

Sure thing. Thanks for also fix the other bug!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37270
No description provided.