Fix #37270: Blender crashes in several situations

Issue was caused by cloth modifier used for particle
system dynamic have an invalid error field pointer.
Seems at some point cloth failed to apply and set an
error,

This commit only fixes crash with existing file,
will look further into why exactly such situation
happened,